Bug 459158 - Update the login experience
-Changed the redirect behaviour/google sign-up process
-Added missing images
-Minor HTML change
-Minor CSS change
-Fixed IE11 issue with images over-spilling the containers

--- a/bundles/org.eclipse.orion.client.ui/web/mixloginstatic/secret/stylesheets/login.css
+++ b/bundles/org.eclipse.orion.client.ui/web/mixloginstatic/secret/stylesheets/login.css
@@ -130,6 +130,12 @@ body {
     color: red;
 }
 
+.orion-auth p {
+    font-size: 12px;
+    max-width: 220px;
+    color: #878787;
+}
+
 p.status {
     color: green;
     margin-top: 12px;
